--- a/package.json
+++ b/package.json
@@ -98,7 +98,6 @@
         "cors": "^2.8.5",
         "date-fns": "^2.30.0",
         "dotenv": "^16.3.1",
-       
         "electron-is-dev": "^2.0.0",
         "electron-log": "^4.4.8",
         "electron-updater": "^6.1.1",
@@ -141,7 +140,8 @@
         "validator": "^13.9.0",
         "web-vitals": "^3.1.1",
         "winston": "^3.2.1",
-        "ws": "^8.13.0"
+        "ws": "^8.13.0",
+        "xlsx": "^0.18.5"
     },
     "devDependencies": {
         "@babel/core": "^7.21.0",
@@ -151,9 +151,9 @@
         "@wdio/mocha-framework": "^8.12.1",
         "@wdio/spec-reporter": "^8.12.2",
         "chromedriver": "^115.0.0",
+        "electron": "^25.3.1",
         "electron-builder": "^23.6.0",
         "electron-is-dev": "^2.0.0",
-        "electron": "^25.3.1",
         "eslint": "^8.34.0",
         "eslint-config-airbnb": "^19.0.4",
         "eslint-config-prettier": "^8.6.0",
