--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "gledah",
-    "version": "1.0.3",
+    "version": "1.1.5",
     "description": "Sistema Facturacion y Administracion ",
     "main": "public/electron.js",
     "homepage": "./",
@@ -27,10 +27,14 @@
         "directories": {
             "buildResources": "assets"
         },
+
+      
+
         "win": {
             "target": "NSIS",
             "icon": "imageInst/logoints.png"
         },
+        
         "publish": [
             {
                 "provider": "github",
@@ -88,6 +92,7 @@
         "@react-pdf/renderer": "^3.1.12",
         "antd": "^5.6.1",
         "apexcharts": "^3.37.0",
+        "app-module-path": "^2.2.0",
         "axios": "^1.4.0",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
@@ -100,6 +105,7 @@
         "dotenv": "^16.3.1",
         "electron-is-dev": "^2.0.0",
         "electron-log": "^4.4.8",
+        "electron-store": "^8.1.0",
         "electron-updater": "^6.1.1",
         "express": "^4.16.4",
         "express-validator": "^6.0.0",
@@ -151,7 +157,7 @@
         "@wdio/mocha-framework": "^8.12.1",
         "@wdio/spec-reporter": "^8.12.2",
         "chromedriver": "^115.0.0",
-        "electron": "^25.3.1",
+        "electron": "^25.5.0",
         "electron-builder": "^23.6.0",
         "electron-is-dev": "^2.0.0",
         "eslint": "^8.34.0",
